
Release 2.6.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-10808. Remove unused native code for munlock. (cnauroth)

    HADOOP-10815. Implement Windows equivalent of mlock. (cnauroth)

    HADOOP-7664. Remove warmings when overriding final parameter configuration
    if the override value is same as the final parameter value.
    (Ravi Prakash via suresh)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-10781. Unportable getgrouplist() usage breaks FreeBSD (Dmitry
    Sivachenko via Colin Patrick McCabe)

    HADOOP-10507. FsShell setfacl can throw ArrayIndexOutOfBoundsException when
    no perm is specified. (Stephen Chu and Sathish Gurram via cnauroth)

    HADOOP-10780. hadoop_user_info_alloc fails on FreeBSD due to incorrect
    sysconf use (Dmitry Sivachenko via Colin Patrick McCabe)

    HADOOP-10810. Clean up native code compilation warnings. (cnauroth)

Release 2.5.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HADOOP-10498. Add support for proxy server. (daryn)

    HADOOP-9704. Write metrics sink plugin for Hadoop/Graphite (Chu Tong, Alex Newman and Babak Behzad via raviprak)

    HADOOP-8943. Support multiple group mapping providers. (Kai Zheng via brandonli)

  IMPROVEMENTS

    HADOOP-10451. Remove unused field and imports from SaslRpcServer.
    (Benoy Antony via jing9)

    HADOOP-10345. Sanitize the the inputs (groups and hosts) for the proxyuser
    configuration. (Benoy Antony via jing9)

    HADOOP-10454. Provide FileContext version of har file system. (Kihwal Lee
    via jeagles)

    HADOOP-10104. Update jackson to 1.9.13 (Akira Ajisaka via stevel)

    HADOOP-10503. Move junit up to v 4.11. (cnauroth)

    HADOOP-10535. Make the retry numbers in ActiveStandbyElector configurable.
    (jing9)

    HADOOP-10322. Add ability to read principal names from a keytab.
    (Benoy Antony and Daryn Sharp via kihwal)

    HADOOP-10549. MAX_SUBST and varPat should be final in Configuration.java.